Agentforce/force-app/main/default/objects/Site_Contact__c/Site_Contact__c.object-meta.xml
<CustomObject>
    <description>Used for ANZ</description>
    <label>Site Contact</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Site Contacts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>