Agentforce/force-app/main/default/objects/Site_Contact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Contacts</relationshipLabel>
    <relationshipName>Site_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>