Agentforce/force-app/main/default/objects/Site_Contact__c/fields/Legacy_OCS_Site_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_Site_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy OCS Site Contact ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>