Agentforce/force-app/main/default/objects/Site_Contact__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Location</label>
    <type>Checkbox</type>
</CustomField>