Agentforce/force-app/main/default/objects/Site_Contact__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <formula>Site__r.Site_Address__Street__s +&quot;, &quot;+  Site__r.Site_Address__City__s  +&quot;, &quot;+  Site__r.Site_Address__PostalCode__s  +&quot;, &quot;+ Text(Site__r.Site_Address__CountryCode__s)</formula>
    <label>Site Address</label>
    <type>Text</type>
</CustomField>